add shim to support summary/details tag in IE/Edge

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2496,3 +2496,6 @@ div.colborder {
 	-webkit-filter: blur(4px);
 	filter: blur(4px);
 }
+
+#rootPanel summary { color:$synapse-blue; }
+#rootPanel summary:hover { text-decoration: underline; cursor:pointer; }
