SWC-3128: show created on date in user profile (as Joined <month> <year>)

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -655,6 +655,10 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 	margin-right: -15px;
 }
 
+.margin-left-neg-2 {
+	margin-left: -2px;
+}
+
 .margin-150 {
 	margin: 150px;
 }
