--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -104,7 +104,10 @@
 						        		</b:Tooltip>
 					        		</bh:Span>
 					        	</bh:Div>
-					        	<g:TextBox ui:field="synapseEmailField" width="100%" addStyleNames="border-none noBackground margin-right-15" readOnly="true" />
+					        	<bh:Div addStyleNames="margin-top-5">
+					        		<bh:Text>Joined&nbsp;</bh:Text><bh:Text ui:field="createdOnText"/>
+					        	</bh:Div>
+					        	<g:TextBox ui:field="synapseEmailField" width="100%" addStyleNames="border-none noBackground margin-right-15 margin-left-neg-2" readOnly="true" />
 				        	</bh:Div>
 				        	<b:Container fluid="true">
 					        	<b:Row>
