--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -81,6 +81,23 @@ end sticky footer
 }
 
 /* Bootstrap overrides */
+#rootPanel .panel {
+	border: 1px solid transparent;
+	box-shadow: none;
+}
+#rootPanel .panel-body {
+	padding: 15px 0 30px 0;
+}
+#rootPanel .nav-tabs {
+	border-bottom: 1px solid #e6e6e6;
+	padding-bottom: 3px;
+}
+#rootPanel .nav-tabs > li > a {
+	box-shadow: none;
+}
+#rootPanel .nav-tabs > li.active > a, #rootPanel .nav-tabs > li > a:hover {
+	box-shadow: inset 0 -2px 0 #1e7098
+}
 .btn-primary {
 	color: #fff !important;
 }
@@ -664,11 +681,6 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 }
 
 .tab-background {
-	background-color: #f9f9f9;
-	border-left: 1px solid #ddd;
-	border-right: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
-	border-radius: 0px 0px 4px 4px;
 	min-height: 200px;
 }
 
@@ -2141,6 +2153,13 @@ td.datePickerMonth {
 
 .border-top-1 {
   border-top: 1px solid #dddddd;
+}
+
+.facetsWidget {
+	border: 1px solid #e6e6e6;
+	padding: 0 10px 30px 15px;
+	margin-top: -8px;
+	max-width: 300px;
 }
 
 .read-only-box {
