--- a/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
@@ -18,9 +18,9 @@
 		    	<div class="container margin-top-15">
 		    		<bh:Div ui:field="synAlertContainer"/>
 				<g:HTMLPanel ui:field="loginView" visible="true">
-					<!-- LoginView -->				
+					<!-- LoginView -->
 					<div class="panel padding-10 col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-						<g:SimplePanel ui:field="loginWidgetPanel" />						
+						<g:SimplePanel ui:field="loginWidgetPanel" addStyleNames="light-border padding-15" />						
 						<!-- Logout View -->
 						<g:SimplePanel ui:field="logoutPanel" />
 					</div>
