--- a/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
@@ -20,9 +20,11 @@
 				<g:HTMLPanel ui:field="loginView" visible="true">
 					<!-- LoginView -->
 					<div class="panel padding-10 col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-						<g:SimplePanel ui:field="loginWidgetPanel" addStyleNames="light-border padding-15" />						
-						<!-- Logout View -->
-						<g:SimplePanel ui:field="logoutPanel" />
+						<div class="light-border padding-15">
+							<g:SimplePanel ui:field="loginWidgetPanel" />						
+							<!-- Logout View -->
+							<g:SimplePanel ui:field="logoutPanel" />
+						</div>
 					</div>
 					<br/>
 				</g:HTMLPanel>
