SWC-4315: update center text md plugin to use version that outputs css class instead of style

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -1409,7 +1409,7 @@ ol.lowerroman {
 }
 
 .align-center {display: block; margin-left: auto; margin-right: auto;}
-.text-align-center { text-align: center;}
+#rootPanel .text-align-center { text-align: center;}
 
 .bottomright {
 	position: absolute;
