--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2146,6 +2146,10 @@ td.datePickerMonth {
   border-left: 1px solid #dddddd;
 }
 
+.border-right-1 {
+  border-right: 1px solid #dddddd;
+}
+
 .border-top-1 {
   border-top: 1px solid #dddddd;
 }
