--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -1304,6 +1304,9 @@ ol.lowerroman {
 	padding: 0px;
 }
 
+.padding-top-10 {
+	padding-top: 10px;
+}
 .padding-top-15 {
 	padding-top: 15px;
 }
@@ -1715,6 +1718,10 @@ ol.lowerroman {
 .padding-right-5 {
 	padding-right: 5px;
 }
+.padding-right-10 {
+	padding-right: 10px;
+}
+
 .padding-right-15 {
 	padding-right: 15px !important;
 }
@@ -1736,15 +1743,12 @@ ol.lowerroman {
 .padding-left-5-imp {
 	padding-left: 5px !important;
 }
-
 .padding-left-10 {
 	padding-left: 10px;
 }
-
 .padding-left-15 {
 	padding-left: 15px;
 }
-
 .padding-left-30 {
 	padding-left: 30px;
 }
