still setting the height

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -583,11 +583,12 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 .margin-top-15 {
 	margin-top: 15px;
 }
-
 .margin-top-20, #body .margin-top-20 {
 	margin-top: 20px;
 }
-
+.margin-top-22 {
+	margin-top: 22px;
+}
 .margin-top-30 {
 	margin-top: 30px;
 }
@@ -1310,11 +1311,12 @@ ol.lowerroman {
 .padding-top-15 {
 	padding-top: 15px;
 }
-
 .padding-top-15-imp {
 	padding-top: 15px !important;
 }
-
+.padding-top-22 {
+	padding-top: 22px;
+}
 .padding-top-bottom-15-left-right-25 {
 	padding: 15px 25px 15px 25px;
 }
