show dropdown menus on hover in the header nav bar

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2542,4 +2542,11 @@ div.colborder {
 		border-radius: 50%;
 		background: white;
 	}
+	
+	.dropdown:hover ul.dropdown-menu{
+		display: block;    
+	}
+	a.menu:after, .dropdown-toggle:after {
+		content: none;
+	}
 }
