add dropdown on hover

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2542,11 +2542,12 @@ div.colborder {
 		border-radius: 50%;
 		background: white;
 	}
-	
-	.dropdown:hover ul.dropdown-menu{
-		display: block;    
+	.dropdown:hover ul.dropdown-menu {
+		display: block;
 	}
 	a.menu:after, .dropdown-toggle:after {
 		content: none;
 	}
+	.dropdown:hover {background-color: green;}
+	.dropdown {background-color: none;}
 }
