change dropdown hover color to variable

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2533,6 +2533,6 @@ div.colborder {
 	a.menu:after, .dropdown-toggle:after {
 		content: none;
 	}
-	.dropdown:hover {background-color: green;}
+	.dropdown:hover {background-color: $synapse-green}
 	.dropdown {background-color: none;}
 }
