use hover state of dropdown for dropdown menu visibility only

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2536,7 +2536,7 @@ div.colborder {
 		border-radius: 50%;
 		background: white;
 	}
-	.dropdown ul.dropdown-menu.hover {
+	.dropdown:hover ul.dropdown-menu {
 		display: block;
 	}
 	.dropdown ul.dropdown-menu {
