change placeholder text so that it is italic

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2577,3 +2577,14 @@ div.colborder {
 	-o-transition: none !important;
 	transition: none !important;
 }
+
+@mixin placeholder {
+	::-webkit-input-placeholder {@content}
+	:-moz-placeholder           {@content}
+	::-moz-placeholder          {@content}
+	:-ms-input-placeholder      {@content}  
+}
+
+@include placeholder {
+	font-style:italic;
+}
