--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -1496,6 +1496,10 @@ ol.lowerroman {
 	position: relative;
 	top: -8px;
 }
+.moveup-7, #body .moveup-7 {
+	position: relative;
+	top: -7px;
+}
 
 .moveup-5 {
 	position: relative;
