SWC-4349: ux tweaks

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2559,6 +2559,9 @@ div.colborder {
 	.dropdown {background-color: none;}
 	.alert {
 		border-radius: 0px;
+		padding: 7px 15px;
+		font-weight: 500;
+		font-size: 15px;
 	}
 }
 #body .alert a {
@@ -2568,6 +2571,9 @@ div.colborder {
 #footerPanel {
 	.alert {
 		border-radius: 0px;
+		padding: 7px 15px;
+		font-weight: 500;
+		font-size: 15px;
 	}
 }
 .lato {
