--- a/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
@@ -410,15 +410,16 @@
 					</b:Panel>
 				</b:Column>		
 				<bh:Div ui:field="sponsorsUI">
+					<bh:Hr />
 	        		<b:Column size="SM_12" addStyleNames="margin-bottom-20">
-	        			<b:Heading size="H3" subText="OUR PARTNERS" />
+	        			<b:Heading size="H4" text="OUR PARTNERS" addStyleNames="lightGreyText"/>
 						<g:HTMLPanel addStyleNames="center">
-							<span class="margin-bottom-5 margin-right-15"><a href="http://www.lsdfa.org/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/nih-heart.svg' height="80px" /></a></span>                            
-							<span class="margin-bottom-5 margin-right-15"><a href="http://www.nhlbi.nih.gov/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/nih-mental.svg' height="80px"  /></a></span>                                                       
-							<span class="margin-bottom-5 margin-right-15"><a href="http://www.sloan.org/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/sloan.svg' height="80px"  /></a></span>
-							<span class="margin-bottom-5 margin-right-15"><a href="http://www.nia.nih.gov/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/nih-aging.svg' height="80px"  /></a></span>
-							<span class="margin-bottom-5 margin-right-15"><a href="http://www.nimh.nih.gov/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/life-sciences.svg' height="80px"  /></a></span>
-							<span class="margin-bottom-5 margin-right-15"><a href="http://www.ctf.org/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/ctf.svg' height="80px"  /></a></span>
+							<span class="margin-bottom-5 margin-right-15"><a href="http://www.nhlbi.nih.gov/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/nih-heart.svg' height="80px" width="15%" /></a></span>                            
+							<span class="margin-bottom-5 margin-right-15"><a href="http://www.nimh.nih.gov/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/nih-mental.svg' height="80px" width="15%" /></a></span>                                                       
+							<span class="margin-bottom-5 margin-right-15"><a href="http://www.sloan.org/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/sloan.svg' height="80px" width="15%" /></a></span>
+							<span class="margin-bottom-5 margin-right-15"><a href="http://www.nia.nih.gov/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/nih-aging.svg' height="80px" width="15%" /></a></span>
+							<span class="margin-bottom-5 margin-right-15"><a href="http://www.lsdfa.org/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/life-sciences.svg' height="80px" width="15%" /></a></span>
+							<span class="margin-bottom-5 margin-right-15"><a href="http://www.ctf.org/" target="_new"><g:Image url='https://s3.amazonaws.com/static.synapse.org/images/ctf.svg' height="80px" width="15%" /></a></span>
 						</g:HTMLPanel>
 					</b:Column>
 				</bh:Div>
