--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2599,3 +2599,8 @@ div.colborder {
 @include placeholder {
 	font-style:italic;
 }
+
+#body .partnersHeading {
+	color: #B7B7B7;
+	font-size: 15px;
+}
