--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -411,6 +411,7 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 .alert, #body .alert {
 	@include box-shadow(0px 1px 2px #aaa);
 	margin: 10px 0px;
+	border: none;
 }
 
 .heading {
