--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -174,7 +174,7 @@ end sticky footer
 }
 
 .light-border-bottom {
-	border-bottom: 1px solid #f1f1f1;
+	border-bottom: 1px solid #f8f8f8;
 }
 
 .sendButton {
@@ -362,7 +362,7 @@ end sticky footer
 }
 
 div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.favoriteIcon:visited, a.favoriteIcon:hover, a.favoriteIcon:focus {
-	color:#f0ad4e;
+	color:#62ac62;
 }
 
 .hitdescription {
