fix crash helmet size again (after conversion from svg to font)

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2445,6 +2445,9 @@ div.border {
 }
 
 #headerPanel {
+	.syn-crash-helmet {
+		font-size: 1.7em;
+	}
 	.searchBox {
 		input, input:focus {
 			background-color:#274660;
@@ -2572,6 +2575,9 @@ div.border {
 }
 
 #footerPanel {
+	.syn-crash-helmet {
+		font-size: 1.7em;
+	}
 	.alert {
 		border-radius: 0px;
 		padding: 7px 15px;
