--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -117,6 +117,11 @@ end sticky footer
 	.nav-tabs > li.active > a, #rootPanel .nav-tabs > li > a:hover {
 		box-shadow: inset 0 -2px 0 #1e7098
 	}
+	@media (min-width: 768px) {
+		.lead {
+			font-size: 18px;
+		}
+	}
 }
 /* End bootstrap overrides */
 
@@ -1587,7 +1592,6 @@ ol.lowerroman {
     top: 6px;
     left: 6px;
 	color: #333333;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 24px;
     font-weight: 200;
     line-height: 1.4;
@@ -1597,7 +1601,6 @@ ol.lowerroman {
 
 .highlight-title {
 	color: #333333;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 24px;
     font-weight: 200;
     line-height: 1.4;
